# vcd-python

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: flask_example.py
tests/: test_detector.py  test_forensics.py  test_middleware.py
vcd/: __init__.py  blocklist.py  detector.py  forensics.py  middleware.py  terminator.py
